--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     
     <div class="calculator">
         <div class="brand">
-            <p>Code-Lord &trade; Calculator</p>
+            <p>Gabula's &trade; Calculator</p>
         </div>
         <!-- Screen -->
         <div class="screen">
